imported the IFubuPage extensions for anti forgery

--- a/packaging/nuget/fubumvc.antiforgery.nuspec
+++ b/packaging/nuget/fubumvc.antiforgery.nuspec
@@ -12,7 +12,8 @@
     <description>Anti-Forgery protection for FubuMVC applications</description>
     <tags>web framework specification fubumvc</tags>
     <dependencies>
-	<dependency id="FubuMVC.Core"/>
+      <dependency id="FubuMVC.Core" version="0.9.9.1274" />
+      <dependency id="FubuMVC.Core.View" version="0.9.9.41" />
     </dependencies>
   </metadata>
   <files>
