--- a/src/FubuMVC.AntiForgery/packages.config
+++ b/src/FubuMVC.AntiForgery/packages.config
@@ -3,6 +3,7 @@
   <package id="Bottles" version="0.9.9.401" targetFramework="net40" />
   <package id="FubuCore" version="0.9.9.206" targetFramework="net40" />
   <package id="FubuLocalization" version="0.9.5.105" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.8.1273" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.9.1274" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="0.9.9.41" targetFramework="net40" />
   <package id="HtmlTags" version="1.2.0.128" targetFramework="net40" />
 </packages>
