--- a/src/FubuMVC.AntiForgery.Testing/packages.config
+++ b/src/FubuMVC.AntiForgery.Testing/packages.config
@@ -3,8 +3,9 @@
   <package id="Bottles" version="0.9.9.401" targetFramework="net40" />
   <package id="FubuCore" version="0.9.9.206" targetFramework="net40" />
   <package id="FubuLocalization" version="0.9.5.105" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="0.9.8.1273" targetFramework="net40" />
-  <package id="FubuTestingSupport" version="0.9.9.205" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="0.9.9.1274" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="0.9.9.41" targetFramework="net40" />
+  <package id="FubuTestingSupport" version="0.9.9.206" targetFramework="net40" />
   <package id="HtmlTags" version="1.2.0.128" targetFramework="net40" />
   <package id="NUnit" version="2.5.10.11092" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
