Changed FubuMVC.Core.View to float

--- a/ripple.config
+++ b/ripple.config
@@ -12,5 +12,6 @@
     <string>FubuMVC.Core</string>
     <string>FubuTestingSupport</string>
     <string>HtmlTags</string>
+    <string>FubuMVC.Core.View</string>
   </Floats>
 </ripple>
