--- a/src/FubuMVC.AntiForgery/packages.config
+++ b/src/FubuMVC.AntiForgery/packages.config
@@ -4,6 +4,7 @@
   <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
   <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
   <package id="FubuMVC.Core" version="0.9.9.1399" targetFramework="net40" />
+  <package id="FubuMVC.Core.UI" version="0.9.9.138" targetFramework="net40" />
   <package id="FubuMVC.Core.View" version="0.9.9.119" targetFramework="net40" />
   <package id="HtmlTags" version="1.2.0.145" targetFramework="net40" />
 </packages>
