Updated buildsupport and nugets

--- a/ripple.config
+++ b/ripple.config
@@ -13,5 +13,6 @@
     <string>FubuTestingSupport</string>
     <string>HtmlTags</string>
     <string>FubuMVC.Core.View</string>
+    <string>FubuMVC.Core.UI</string>
   </Floats>
 </ripple>
