Updated buildsupport and nugets

--- a/ripple.config
+++ b/ripple.config
@@ -14,5 +14,9 @@
     <string>HtmlTags</string>
     <string>FubuMVC.Core.View</string>
     <string>FubuMVC.Core.UI</string>
+    <string>FubuMVC.Katana</string>
+    <string>FubuMVC.OwinHost</string>
+    <string>FubuMVC.StructureMap</string>
+    <string>FubuMVC.Spark</string>
   </Floats>
 </ripple>
