Add encoding to cookie values
Update ripple to ripple2.
Updated the fubu nugets.
Encode the values of the cookie using the HttpUtility.EncodeUrl so that
it will correctly populate the values when you go to check them in the
Validate method in the AntiForgeryValidator.

--- a/ripple.config
+++ b/ripple.config
@@ -1,22 +1,15 @@
 <?xml version="1.0"?>
-<ripple xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+<ripple xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <Name>FubuMVC.AntiForgery</Name>
   <NugetSpecFolder>packaging/nuget</NugetSpecFolder>
   <SourceFolder>src</SourceFolder>
   <BuildCommand>rake</BuildCommand>
   <FastBuildCommand>rake compile</FastBuildCommand>
-  <Floats>
-    <string>Bottles</string>
-    <string>FubuCore</string>
-    <string>FubuLocalization</string>
-    <string>FubuMVC.Core</string>
-    <string>FubuTestingSupport</string>
-    <string>HtmlTags</string>
-    <string>FubuMVC.Core.View</string>
-    <string>FubuMVC.Core.UI</string>
-    <string>FubuMVC.Katana</string>
-    <string>FubuMVC.OwinHost</string>
-    <string>FubuMVC.StructureMap</string>
-    <string>FubuMVC.Spark</string>
-  </Floats>
+  <Feeds>
+    <Feed Url="http://build.fubu-project.org/guestAuth/app/nuget/v1/FeedService.svc" Mode="Float" Stability="ReleasedOnly" />
+    <Feed Url="http://nuget.org/api/v2" Mode="Fixed" Stability="ReleasedOnly" />
+    <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
+  </Feeds>
+  <Nugets />
+  <Groups />
 </ripple>
