Dealing with ripple2 updates

--- a/ripple.config
+++ b/ripple.config
@@ -10,6 +10,13 @@
     <Feed Url="http://nuget.org/api/v2" Mode="Fixed" Stability="ReleasedOnly" />
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
-  <Nugets />
+  <Nugets>
+    <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
+    <Dependency Name="Owin" Version="1.0" Mode="Fixed" />
+    <Dependency Name="Owin.Extensions" Version="0.6.4" Mode="Fixed" />
+    <Dependency Name="RhinoMocks" Version="3.6" Mode="Fixed" />
+    <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
+    <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
+  </Nugets>
   <Groups />
 </ripple>
