--- a/src/FubuMVC.AntiForgery.Testing/FubuMVC.AntiForgery.Testing.csproj
+++ b/src/FubuMVC.AntiForgery.Testing/FubuMVC.AntiForgery.Testing.csproj
@@ -66,7 +66,7 @@
       <HintPath>..\packages\NUnit\lib\pnunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.Mocks">
-      <HintPath>..\packages\RhinoMocks\lib\net\Rhino.Mocks.dll</HintPath>
+      <HintPath>..\packages\RhinoMocks\lib\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap">
       <HintPath>..\packages\structuremap\lib\StructureMap.dll</HintPath>
