Moving policy towards an action filter #7

--- a/src/FubuMVC.AntiForgery/FubuMVC.AntiForgery.csproj
+++ b/src/FubuMVC.AntiForgery/FubuMVC.AntiForgery.csproj
@@ -69,6 +69,7 @@
     <Compile Include="AntiForgeryData.cs" />
     <Compile Include="AntiForgeryExtensions.cs" />
     <Compile Include="AntiForgeryNode.cs" />
+    <Compile Include="AntiForgeryFilter.cs" />
     <Compile Include="AntiForgeryPolicy.cs" />
     <Compile Include="AntiForgeryService.cs" />
     <Compile Include="AntiForgeryServiceRegistry.cs" />
